Updated CSS order and button in HTML

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p class="pricing__text pricing__text--2">
           Full access for less than &dollar;1 a day
         </p>
-        <a href="#" class="btn">Sign Up</a>
+        <a class="btn" href="#" role="button">Sign Up</a>
       </div>
       <div class="reason">
         <h3 class="heading__tertiary heading__tertiary--3">Why Us</h3>
